# corrupter

./: .gitignore  CMakeLists.txt  README.md  corrupter-dsp-disting-plan.md  corrupter-prd.md
.github/workflows/: release.yaml  vcv-release.yaml
docs/: AUDIO_QUALITY_SPEC.md  acceptance-matrix.md  distingnt-parameter-spec.md  llm-integration.md  phase-completion.md  verification.md
examples/: benchmark.cpp  distingnt_wrapper_reference.cpp  offline_smoke.cpp  regression_tests.cpp
include/corrupter_dsp/: c_api.h  engine.h  parameter_ids.h  pitch_quantizer.h
nt/: Makefile  corrupter_nt.cpp
specs/: 2026-05-05_i-would-like-to-ethereal-pumpkin.md
src/: a.out  c_api.cpp  engine.cpp  pitch_quantizer.cpp  test_wrap.cpp
src/internal/: clock_engine.cpp  clock_engine.h  corrupt_engine.cpp  corrupt_engine.h  dsp_common.h  prng.h
tests/spectral/: CMakeLists.txt  engine_driver.cpp  engine_driver.h  spectral_helpers.cpp  spectral_helpers.h  test_aliasing.cpp  test_clicks.cpp  test_fra_per_module.cpp  test_framework.h  test_freeze_transitions.cpp  test_golden_hash.cpp  test_runner.cpp  test_smoke.cpp  test_smoothing.cpp  test_thd.cpp
tests/spectral/baseline/251a7c6/: REPORT.md  aa_decimate_i050_1k_spectrum.csv  aa_destroy_i030_5k_output.csv  aa_destroy_i030_7k_output.csv  aa_destroy_i070_5k_spectrum.csv  aa_destroy_i070_7k_output.csv  aa_destroy_i070_7k_spectrum.csv  clk_corrupt_step.csv  drp_edges.csv  sm_corrupt_step.csv  sm_pitch_step.csv  thd_destroy_hard_spectrum.csv  thd_djfilter_spectrum.csv
tests/spectral/runs/iter-2A-corrupt-smoothing/: REPORT.md  aa_decimate_i010_1k_spectrum.csv  aa_destroy_i030_7k_spectrum.csv  aa_djfilter_i005_80hz_spectrum.csv  clk_bend_step.csv  clk_corrupt_step.csv  drp_edges.csv  fra_vinyl_tone.csv  frz_toggle.csv  sm_corrupt_step.csv  sm_destroy_crossover.csv  sm_tape_drive_step.csv  thd_destroy_soft_spectrum.csv  thd_vinyl_spectrum.csv
tests/spectral/runs/iter-2B-destroy-oversample/: REPORT.md  aa_djfilter_i005_80hz_input.csv  clk_corrupt_step.csv  fra_decimate_idle.csv  sm_corrupt_step.csv  sm_destroy_crossover.csv
tests/spectral/runs/iter-2B-pass-2-investigation/: REPORT.md  aa_destroy_i070_7k_output.csv  clk_corrupt_step.csv  clk_decimate_holdstep.csv  fra_djfilter_hpmax.csv  sm_tape_drive_step.csv
tests/spectral/runs/iter-2C-tape-drive-smoothing/: REPORT.md  aa_decimate_i010_1k_input.csv  aa_decimate_i010_1k_output.csv  aa_decimate_i090_1k_output.csv  aa_destroy_i070_5k_input.csv  aa_destroy_i070_5k_output.csv  aa_djfilter_i005_80hz_output.csv  aa_vinyl_i050_1k_output.csv  aa_vinyl_i050_1k_spectrum.csv  drp_edges.csv
tests/spectral/runs/iter-2D-destroy-crossover/: REPORT.md  aa_decimate_i050_1k_output.csv  aa_decimate_i090_1k_spectrum.csv  aa_destroy_i030_5k_spectrum.csv  aa_destroy_i030_7k_spectrum.csv  aa_destroy_i070_7k_spectrum.csv  clk_bend_step.csv  fra_djfilter_center.csv  frz_xfade_ticks.csv  thd_destroy_hard_spectrum.csv  thd_destroy_soft_spectrum.csv
tests/spectral/runs/iter-2E-decimate-investigation/: REPORT.md
tests/spectral/runs/iter-3-plateau-tighten/: REPORT.md  aa_destroy_i030_7k_input.csv  aa_destroy_i030_7k_output.csv  aa_vinyl_i050_1k_input.csv  fra_djfilter_lpmax.csv  sm_corrupt_step.csv  sm_destroy_crossover.csv
vcv/: .gitignore  Makefile  plugin.json
vcv/docs/: manual.md
vcv/src/: Corrupter.cpp  plugin.cpp  plugin.hpp
